fix: align continuous enrollment section content with standard content width

--- a/components/ContentWrapper/ContentWrapper.module.scss
+++ b/components/ContentWrapper/ContentWrapper.module.scss
@@ -404,6 +404,15 @@
       gap: 0;
       margin: 3rem 0;
       overflow: visible;
+      width: 100%;
+      box-sizing: border-box;
+
+      @media (min-width: $breakpoint-small) {
+        width: 100vw;
+        max-width: 100vw;
+        margin-left: calc(50% - 50vw);
+        margin-right: calc(50% - 50vw);
+      }
     }
 
     [data-half-width-row='true'] > .half-width {
@@ -429,6 +438,7 @@
       padding: 3.2rem 2.8rem !important;
       position: relative;
       z-index: 0;
+      box-sizing: border-box;
 
       @media (min-width: $breakpoint-small) {
         // min-height: 40rem;
@@ -468,48 +478,26 @@
     }
 
     @media (min-width: $breakpoint-small) {
-      .wp-block-group.half-width::before,
-      .wp-block-group.full-width::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        background: inherit;
-        z-index: -1;
-        pointer-events: none;
-      }
-
-      .wp-block-group.half-width:nth-child(odd)::before {
-        left: calc(50% - 50vw);
-        right: 0;
-      }
-
-      .wp-block-group.half-width:nth-child(even)::before {
-        left: 0;
-        right: calc(50% - 50vw);
+      .wp-block-group.half-width,
+      .wp-block-group.full-width {
+        width: 100%;
+        max-width: 100%;
       }
     }
 
     .wp-block-group.full-width {
       margin: 3rem 0;
-
-      @media (min-width: $breakpoint-small) {
-        &::before {
-          left: calc(50% - 50vw);
-          right: calc(50% - 50vw);
-        }
-      }
     }
 
     @media (min-width: $breakpoint-small) {
       .wp-block-group.half-width:nth-child(odd) {
-        padding-left: 0 !important;
+        padding-left: calc(clamp(2rem, calc((100vw - #{$content-max-width}) / 2), 24rem) + 55px) !important;
         padding-right: 5rem !important;
       }
 
       .wp-block-group.half-width:nth-child(even) {
         padding-left: 5rem !important;
-        padding-right: 0 !important;
+        padding-right: clamp(2rem, calc((100vw - #{$content-max-width}) / 2), 24rem) !important;
       }
     }
 
